--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,18 @@
 {
-    "builds": [{
-        "src": "comp_math/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.10.9" }
-    }],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "comp_math/wsgi.py"
-        }
-    ]
+  "version": 2,
+  "builds": [
+    {
+      "src": "manage.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/manage.py"
+    }
+  ],
+  "env": {
+    "DJANGO_SETTINGS_MODULE": "myproject.settings"
+  }
 }
